@@ -203,19 +203,19 @@ class Boot {
 #end
 			Array.prototype.copy = Array.prototype.slice;
 			Array.prototype.insert = function(i,x) {
-				this.splice(i,0,x);
+				__this__.splice(i,0,x);
 			};
 			Array.prototype.remove = if( Array.prototype.indexOf ) function(obj) {
-				var idx = this.indexOf(obj);
+				var idx = __this__.indexOf(obj);
 				if( idx == -1 ) return false;
-				this.splice(idx,1);
+				__this__.splice(idx,1);
 				return true;
 			} else function(obj) {
 				var i = 0;
-				var l = this.length;
+				var l = __this__.length;
 				while( i < l ) {
-					if( this[i] == obj ) {
-						this.splice(i,1);
+					if( __this__[i] == obj ) {
+						__this__.splice(i,1);
 						return true;
 					}
 					i++;
@@ -225,19 +225,19 @@ class Boot {
 			Array.prototype.iterator = function() {
 				return {
 					cur : 0,
-					arr : this,
+					arr : __this__,
 					hasNext : function() {
-						return this.cur < this.arr.length;
+						return __this__.cur < __this__.arr.length;
 					},
 					next : function() {
-						return this.arr[this.cur++];
+						return __this__.arr[__this__.cur++];
 					}
 				}
 			};
 			if( String.prototype.cca == null )
 				String.prototype.cca = String.prototype.charCodeAt;
 			String.prototype.charCodeAt = function(i) {
-				var x = this.cca(i);
+				var x = __this__.cca(i);
 				if( x != x ) // fast isNaN
 					return null;
 				return x;
@@ -245,14 +245,14 @@ class Boot {
 			var oldsub = String.prototype.substr;
 			String.prototype.substr = function(pos,len){
 				if( pos != null && pos != 0 && len != null && len < 0 ) return "";
-				if( len == null ) len = this.length;
+				if( len == null ) len = __this__.length;
 				if( pos < 0 ){
-					pos = this.length + pos;
+					pos = __this__.length + pos;
 					if( pos < 0 ) pos = 0;
 				}else if( len < 0 ){
-					len = this.length + len - pos;
+					len = __this__.length + len - pos;
 				}
-				return oldsub.apply(this,[pos,len]);
+				return oldsub.apply(__this__,[pos,len]);
 			};
 			__js__("$closure = js.Boot.__closure");
 		}
