@@ -25,6 +25,7 @@
 	all : optimized variable tracking/renaming
 	all : optimized macro engine (speed x2)
 	all : added -D macrotimes support
+	all : added untyped __this__ support (prepare for 'this' spec. change)
 
 2011-01-30: 2.07
 	all : fixed completion support with --remap
